--- a/style.css
+++ b/style.css
@@ -17,3 +17,15 @@ button {
   padding: 10px 20px;
   cursor: pointer;
 }
+
+#pomodoro-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; /* Eskiden center olabilir */
+  min-height: 100vh; /* height: 100vh yerine */
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 40px 1.1rem 1.1rem 1.1rem; /* üst boşluk azalsın diye */
+  box-sizing: border-box;
+}
