--- a/style.css
+++ b/style.css
@@ -3,24 +3,12 @@ body {
   background-color: #242424;
   color: #fff;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 30px; /* veya 20px ya da 40px */
 }
 
 #timer {
   font-size: 80px;
   margin: 20px 0;
-}
-
-#pomodoro-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start; /* Eskiden center olabilir */
-  min-height: 100vh; /* height: 100vh yerine */
-  max-width: 500px;
-  margin: 0 auto;
-  padding: 40px 1.1rem 1.1rem 1.1rem; /* üst boşluk azalsın diye */
-  box-sizing: border-box;
 }
 
 button {
