--- a/style.css
+++ b/style.css
@@ -7,14 +7,18 @@ body {
 }
 
 #timer {
-  font-size: 65px;
+  font-size: 40px; /* 65 yerine */
   margin: 15px 0;
 }
 
 button {
-  font-size: 10px;
+  font-size: 14px;
   margin: 10px;
-  padding: 5px 20px;
+  padding: 10px 25px;
   cursor: pointer;
+  background-color: #444;
+  color: white;
+  border: none;
+  border-radius: 8px;
 }
 
